<resources>
  <string name="app_name">Mauricio CV</string>
  <string name="worker_name">Maurício Fonseca</string>
  <string name="software_engineer">Engenheiro de Software</string>
  <!--Synthesis-->
  <string name="qualification_synthesis">Síntese de Qualificações</string>
  <!--Work-->
  <string name="work_history">Histórico Profissional</string>
  <!--School-->
  <string name="academic_formation">Formação Acadêmica</string>
  <!--Complement-->
  <string name="complementary_activities">Atividades Complementares</string>
  <!--Contact-->
  <string name="contact">Contato</string>
  <!--Dev-->
  <string name="about">Sobre este app</string>
  <string name="explanation">Este aplicativo foi desenvolvido utilizando o princípio do KISS (Keep-It-Simple-Stupid).
A arquitetura clean foi utilizada brevemente porém sem criar muitos rodeios uma vez que o app é pequeno.
Não foi utilizada nenhuma biblioteca externa e o app é nativo Android, iniciado em Java mas migrado para Kotlin após um curto período.
Pouco tempo de desenvolvimento foi empregado antes da publicação na Play Store, afinal é melhor falhar rápido do que demorado.</string>
  <string name="github_call">O código está aberto no GitHub:</string>
  <string name="email_call">Sugestões e críticas ou pedidos podem ser enviados por e-mail: </string>
  <string name="rating_call">Avalie este aplicativo na Play Store e deixe seu comentário pelo link:</string>
  <string name="thanks">Muito obrigado por ter chegado até aqui!</string>
  <!--Main-->
  <string name="search">Buscar competência</string>
  <!--Share-->
  <string name="share">Compartilhe este App</string>
  <!--Apps-->
  <string name="portfolio">Portfolio de Apps</string>

</resources>
