<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="80dp"
  android:layout_height="match_parent">
  <ScrollView
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:background="@color/md_grey_400"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <ImageView
        android:padding="16dp"
        android:background="@drawable/ripple_bar"
        android:src="@drawable/twotone_mauricio_black_48"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/qualification_synthesis"
        android:onClick="synthesisClicked"/>
      <ImageView
        android:padding="16dp"
        android:background="@drawable/ripple_bar"
        android:src="@drawable/twotone_school_black_48"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/academic_formation"
        android:onClick="schoolClicked"/>
      <ImageView
        android:padding="16dp"
        android:background="@drawable/ripple_bar"
        android:src="@drawable/twotone_business_center_black_48"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/work_history"
        android:onClick="workClicked"/>
      <ImageView
        android:padding="16dp"
        android:background="@drawable/ripple_bar"
        android:src="@drawable/twotone_smartphone_black_48"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/apps"
        android:onClick="appsClicked"/>
      <ImageView
        android:padding="16dp"
        android:background="@drawable/ripple_bar"
        android:src="@drawable/twotone_dashboard_black_48"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/complementary_activities"
        android:onClick="complementClicked"/>
      <ImageView
        android:padding="16dp"
        android:background="@drawable/ripple_bar"
        android:src="@drawable/twotone_email_black_48"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/contact"
        android:onClick="contactClicked"/>
      <ImageView
        android:padding="16dp"
        android:background="@drawable/ripple_bar"
        android:src="@drawable/twotone_share_black_48"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/share"
        android:onClick="shareClicked"/>
      <ImageView
        android:padding="16dp"
        android:background="@drawable/ripple_bar"
        android:src="@drawable/twotone_code_black_48"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/about"
        android:onClick="devClicked"/>

    </LinearLayout>
  </ScrollView>
</FrameLayout>